objects/DebugInfo__c.object
<CustomObject>
    <fields>
        <fullName>DebugData__c</fullName>
        <label>DebugData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DebugLabel__c</fullName>
        <label>DebugLabel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>MethodName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessName__c</fullName>
        <label>ProcessName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DebugLog</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>DebugInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DebugLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>